--- a/contact.html
+++ b/contact.html
@@ -2,40 +2,48 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" her="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>お問い合わせフォーム</title>
 
 </head>
 <body>
 
- <div class="contact_form">
+    <div class="contact_form">
 
- 
- <div><h2>お問い合わせ</h2></div>
+        <div>
+            <h2>お問い合わせ</h2>
+        </div>
 
- <form method="post" action="">
-    <td class="form">
-    
-     <p class="main">お名前</p>
-    <td><input type="text"></td>
-     <p class="sub">メールアドレス</p>
-     <input>
+        <form method="post" action="">
+            <td class="form">
+                <p class="main">お名前</p>
+            </td>
 
+            <td>
+                <input type="text">
+            </td>
+
+            <td>
+                <p class="sub">メールアドレス</p>
+            </td>
+
+            <td>
+                <input>
+            </td>
+
+            <td>
+                <p class="txt">お問い合わせ内容</p>
+            </td>
+
+            <td>
+                <textarea></textarea>
+            </td>
+
+            <br>
+            <td>
+                <input type="submit" class="submit">
+            </td>
+        </form>
     </div>
- <div>
-     <tr>
-     <p class="txt">お問い合わせ内容</p></div>
-     <td><textarea></textarea></td>
-    </tr>
-  </table>
- <div class="contactForm">
-     <form>
-        <input type="submit" class="submit">
-    </form>
- </div>
-
- </div>
 </body>
-
-
 </html>
