--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>お問い合わせフォーム</title>
-
 </head>
 <body>
 
@@ -13,14 +12,25 @@
         <div>
             <h2>お問い合わせ</h2>
         </div>
-
+        <div class="acordion">
+            <dl id="accordion">
+              <dt>名前について</dt>
+              <dd>フルネームをご入力ください。</dd>
+              <dt>連絡先について</dt>
+              <dd>電話番号をご入力ください。</dd>
+              <dt>お問い合わせ内容</dt>
+              <dd>400文字以内でご入力ください。</dd>
+            </dl>
+            </div>
+            <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+            <script type="text/javascript" src="main.js"></script>
         <form method="post" action="">
             <td class="form">
                 <p class="main">お名前</p>
             </td>
 
             <td>
-                <input type="text">
+                <input type="text"　>       
             </td>
 
             <td>
